<resources>
    <!--    Main Activity-->
    <string name="app_name">Yasa Travels</string>
    <!--    Login Activity-->
    <!--    <string name="login">LogIn</string>-->
    <!--    <string name="email">EMAIL</string>-->
    <!--    <string name="password">PASSWORD</string>-->
    <!--    <string name="noAccount">new to us, click here to</string>-->
    <!--    <string name="signup">SignUp</string>-->
    <!--    Search Activity-->
    <string name="explore">Explore..</string>
    <string name="searchHint">Search District....</string>
    <string name="searchHotels">Hotels</string>
    <string name="searchRides">Rides</string>
    <string name="searchGuides">Tour Guides</string>
    <string name="searchLocations">Places &amp; Things to do</string>
    <string name="exploreDescription">Endless beaches, timeless ruins, welcoming people, oodles of elephants, rolling surf, cheap prices, fun trains, famous tea and flavourful food make Sri Lanka irresistible.</string>
    <!--    Search Results-->
    <string name="searchResultsHTopic">Search results for Hotels in ~ </string>
    <string name="searchResultsLTopic">Search results for Locations in "District_Name" </string>
    <string name="searchResultsGTopic">Search results for Guides in ~  </string>
    <string name="searchResultsRTopic">Search results for Rides in "District_Name" </string>
    <string name="contactBtn">Contact Us</string>
    <string name="avgCosts">Average Price range</string>
    <string name="submit">Submit</string>
    <string name="checkPrice">Estimate your next vacation </string>
    <string name="lodging">Lodging</string>
    <!--    User Signup-->
    <string name="page_title">Sign Up here !!!</string>
    <string name="profile_picture">Profile picture :</string>
    <string name="name">Name :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="re_enter_password">Re-enter password :</string>
    <string name="signup">Sign Up</string>
    <string name="login">LogIn</string>
    <string name="logintxt">Already have an account ?</string>
    <string name="noAccount">New here ? Click to</string>
    <!--    User Home-->
    <!--activity2 strings-->
    <string name="explore_button">Explore</string>
    <!--lorem text-->
    <string name="home_descrpton1">The Undiscovered Country   You might say Sri Lanka has been hiding in plain sight. Scores of travellers have passed overhead on their way to someplace else, but years of uncertainty kept Sri Lanka off many itineraries.  Now, however, all that has changed. The country is moving forward quickly as more and more people discover its myriad charms. Lying between the more trodden parts of India and Southeast Asia, Sri Lanka\'s history, culture and natural beauty are undeniably alluring. It\'s the place you haven\'t been to yet, that you should.</string>
    <string name="home_des2">So Much in So Little   Few places have as many Unesco World Heritage Sites (eight) packed into such a small area. Sri Lanka\'s 2000-plus years of culture can be discovered at ancient sites where legendary temples boast beautiful details even as they shelter in caves or perch on prominent peaks. More recent are evocative colonial fortresses, from Galle to Trincomalee.  Across the island, that thing that goes bump in the night might be an elephant heading to a favourite waterhole. Safari tours of Sri Lanka’s pleasantly relaxed national parks encounter leopards, water buffaloes, all manner of birds and a passel of primates.    It’s So Easy   Distances are short: see the sacred home of the world’s oldest living human-planted tree in the morning (Anuradhapura) and stand awestruck by the sight of hundreds of elephants gathering in the afternoon (Minneriya). Discover a favourite beach, meditate in a 2000-year-old temple, exchange smiles while strolling a mellow village, marvel at birds and wildflowers, try to keep count of the little dishes that come with your rice and curry. Wander past colonial gems in Colombo, then hit some epic surf.  Sri Lanka is spectacular, affordable and still often uncrowded. Now is the best time to discover it.</string>

    <string name="home_logout">Log Out</string>
    <string name="home_homeIcon">Home</string>
    <string name="home_profleIcon">Profile</string>
    <string name="home_convertor">Currency Converter</string>
    <string name="home_aboutUs">About Us</string>
    <string name="homeDescription">Set in the Indian Ocean in South Asia, the tropical island nation of Sri Lanka has a history dating back to the birth of time.  It is a place where the original soul of Buddhism still flourishes and where nature’s beauty remains abundant and unspoilt.Few places in the world can offer the traveller such a remarkable combination of stunning landscapes, pristine beaches, captivating cultural heritage and unique experiences within such a compact location.</string>
    <!--    User Profile-->
    <!--lorem text-->
    <string name="user_name">Josh Fernando</string>
    <string name="user_phone">0719934085</string>
    <string name="user_email">jossyf@gmail.com</string>

    <string name="user_profileUpdate">Update Profile</string>
    <string name="user_profileDelete">Delete Profile</string>
    <string name="user_waterMark">Happy Travelling !</string>

    <!--update profile strings-->
    <string name="user_saveProfileUpdates">Save Updates</string>

    <!--    Admin Profile-->
    <string name="dashboard">Admin Dashboard</string>
    <string name="admin">Administrator</string>
    <string name="aRides">Manage Rides</string>
    <string name="aGuides">Manage Guides</string>
    <string name="aLocations">Manage Locations</string>
    <string name="aHotels">Manage Hotels</string>
    <string name="aUsers">Manage Users</string>
    <string name="signout">Sign Out</string>
    <!--    About Us-->
    <string name="aboutUs">About Us..</string>
    <string name="aboutUsDes">We Yasa-Travels here to help you out to plan your holiday, vacation, trip to somewhere. With this app you can easily contact with available hotels and vehicles. Also you can contact an experienced tour guide to join with you for flexible prices to explore in your journey more. </string>
    <string name="contactUs">Reach us..</string>
    <string name="contacUsPhone">012-3456789</string>
    <string name="contacUsEmail">yasatravels@gmail.com</string>
    <string name="followUs">Follow us on -</string>
    <!--    Manage-->
    <string name="manageH">Manage Hotels</string>
    <string name="manageG">Manage Guides</string>
    <string name="manageR">Manage Rides</string>
    <string name="manageL">Manage Locations</string>
    <string name="addnew">Add New</string>
    <!--    Spinner dropdown district container-->
    <string-array name="Districts">
        <item>Jaffna</item>
        <item>Kilinochchi</item>
        <item>Mannar</item>
        <item>Mullaitivu</item>
        <item>Vavuniya</item>
        <item>Puttalam</item>
        <item>Kurunegala</item>
        <item>Gampaha</item>
        <item>Colombo</item>
        <item>Kalutara</item>
        <item>Anuradhapura</item>
        <item>Polonnaruwa</item>
        <item>Matale</item>
        <item>Kandy</item>
        <item>Nuwara Eliya</item>
        <item>Kegalle</item>
        <item>Ratnapura</item>
        <item>Trincomalee</item>
        <item>Batticaloa</item>
        <item>Ampara</item>
        <item>Badulla</item>
        <item>Monaragala</item>
        <item>Hambantota</item>
        <item>Matara</item>
        <item>Galle</item>
    </string-array>
    <!--    Edit Hotel/Location/Ride/Guide-->
    <string name="mgUploadImg">Add Image</string>
    <string name="mgChangeImg">Change Image</string>
    <string name="mgName">Name</string>
    <string name="rideName">Driver\'s Name</string>
    <string name="rideType">Ride Type</string>
    <string name="rideVno">Vehicle No.</string>
    <string name="rideCPkm">Cost per km.</string>
    <string name="mgDistrict">District</string>
    <string name="mgDescription">Description</string>
    <string name="mgContact">Contact no.</string>
    <string name="mgAddress">Address</string>
    <string name="mgUpdateBtn">Update</string>
    <string name="mgDeleteBtn">Remove</string>
    <string name="regGuide">Edit Guides</string>
    <string name="mgUsers">Manage Users</string>
    <!--    Add Hotel/Location/Ride/Guide-->
    <string name="saveBtn">Save</string>
    <string name="addH">Add New Hotel</string>
    <string name="addR">Add New Ride</string>
    <string name="addL">Add New Location</string>
    <string name="addG">Add New Guide</string>
    <!--    Hotel extras-->
    <string name="Costs">Average Costs</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="singlebed">Single-Bed Rooms</string>
    <string name="doublebed">Double-Bed Rooms</string>

    <string name="mgTPriceAdult">Ticket Price Adult</string>
    <string name="mgTPriceChild">Ticket Price Child</string>
    <string name="mgNofAdults">Number of Adults</string>
    <string name="mgNofChild">Number of Children</string>
    <string name="CalculateTPrice">Calculate Ticket Price</string>
</resources>