<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddHotelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/addH"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvUploadImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/mgChangeImg"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgUploadAH"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_type_delete"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tfAHname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/tvDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgDistrict"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerHADistrict"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dropdown_spinner_custom" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgDescription"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tfAHdescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgContact"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tfAHcontact"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="number"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/tvAHCosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/Costs"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tfAHcbreakfast"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:hint="@string/breakfast"
            android:inputType="number"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/tfAHclunch"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:hint="@string/lunch"
            android:inputType="number"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/tfAHcdinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:hint="@string/dinner"
            android:inputType="number"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/tfAHcsingleB"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:hint="@string/singlebed"
            android:inputType="number"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/tfAHcdoubleB"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:hint="@string/doublebed"
            android:inputType="number"
            android:paddingStart="10dp" />


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/saveBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>



</ScrollView>