<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/tv-explore"
        android:layout_width="194dp"
        android:layout_height="42dp"
        android:fontFamily="casual"
        android:text="@string/explore"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <EditText
        android:id="@+id/tfSearch"
        android:layout_width="314dp"
        android:layout_height="41dp"
        android:background="@drawable/search_outline"
        android:ems="10"
        android:hint="@string/searchHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <ImageButton
        android:id="@+id/imgBtnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tfSearch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        app:srcCompat="@drawable/search_icon" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="188dp"
        android:layout_height="134dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554">

        <RadioButton
            android:id="@+id/radBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/searchHotels" />

        <RadioButton
            android:id="@+id/radBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchLocations" />

        <RadioButton
            android:id="@+id/radBtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchRides" />

        <RadioButton
            android:id="@+id/radBtn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchGuides" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="359dp"
        android:layout_height="82dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/exploreDescription"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfSearch"
        app:layout_constraintVertical_bias="0.952" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="383dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toTopOf="@+id/tfSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        app:srcCompat="@drawable/lanka_buildings" />

</androidx.constraintlayout.widget.ConstraintLayout>