<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rideadd1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddRideActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/addR"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvUploadImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/mgChangeImg"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageAddRides"
            android:layout_width="288dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_type_delete" />
        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideType"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/typeInputAddRide"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/driverAddRides"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgDistrict"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinDistrictAddRides"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dropdown_spinner_custom" />

        <TextView
            android:id="@+id/tvVno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideVno"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/vehicleNoAddRides"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />
        <TextView
            android:id="@+id/tvCPkm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideCPkm"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/costAddRides"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgDescription"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/descriptionAddRides"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgContact"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/phoneAddRides"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />



            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saveBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.287"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



    </LinearLayout>
</ScrollView>