<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rideedit1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditRideActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideType"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/rideEditType"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rideEditDriver"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvVno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideVno"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rideEditVehicleNo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />
        <TextView
            android:id="@+id/tvCPkm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/rideCPkm"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/rideEditCost"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgDescription"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rideEditDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:text="@string/mgContact"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rideEditPhone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_delete"
            android:ems="10"
            android:inputType="textPersonName" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/updateHbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mgUpdateBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.287"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/deleteHbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mgDeleteBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.345"
                app:layout_constraintStart_toEndOf="@+id/updateHbtn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>